src/stories/atomic-components/buttons/button.css
@tailwind components;

@layer components {
  .button {
    @apply flex flex-row items-center justify-center gap-1 rounded-lg border-2 px-4 py-2 font-averiaSerifLibre text-lg font-normal shadow-button-default hover:shadow-button-hover focus:shadow-button-focus disabled:cursor-not-allowed disabled:opacity-30 dark:shadow-button-default-dark dark:hover:shadow-button-hover-dark dark:focus:shadow-button-focus-dark;

    color: var(--current-text);
    background-color: var(--current-background);
    border-color: var(--current-text);
    outline: none;
  }

  .button.btn-primary {
    @apply bg-[var(--current-primary)];
  }

  .button.btn-secondary {
    @apply bg-[var(--current-secondary)];
  }

  .button.btn-outline {
    @apply bg-transparent;
  }
}

